--- a/index.css
+++ b/index.css
@@ -37,7 +37,10 @@ h1 {
     align-items: center;
     justify-content: space-between;
     width: 350px;
-    transition: text-decoration 0.2s ease-out;
+}
+
+.navigation p {
+    transition: text-decoration 0.3s ease-out;
 }
 
 .navigation p:hover {
@@ -45,26 +48,59 @@ h1 {
     text-decoration: underline;
 }
 
-.navbar .nav-icon {
-    width: 25px;
+.nav-icon {
+    width: 24px;
     transition: transform 0.2s ease-out;
 }
 
-.navbar .nav-icon:hover {
+.nav-icon:hover {
     cursor: pointer;
     transform: scale(1.3);
 }
 
 .navbar .hamburger {
     display: none;
+    cursor: pointer;
 }
 
-.navbar .bar {
+.navbar .bar1, .bar2, .bar3 {
     background-color: black;
     width: 36px;
     height: 4px;
     margin: 2px 0;
     border-radius: 10px;
+}
+
+.mobileNav {
+    display: none;
+    flex-direction: column;
+    width: 80px;
+    height: 100vh;
+    justify-content: center;
+    align-items: center;
+    background-color: rgba(255, 255, 255, 0.7);
+    position: fixed;
+    z-index: 2;
+    top: 0;
+    right: -160px;
+    padding: 0 16px;
+    transition: transform 0.5s ease-out;
+}
+.openMobileNav {
+    transform: translateX(-160px);
+}
+
+.mobileNav p {
+    transition: text-decoration 0.3s ease-out;
+}
+
+.mobileNav p:hover {
+    cursor: pointer;
+    text-decoration: underline;
+}
+
+.mobileNav .nav-icon {
+    margin: 16px 0;
 }
 
 .project-grid {
@@ -183,7 +219,7 @@ h1 {
     .navbar {
         margin: 0;
         position: fixed;
-        z-index: 2;
+        z-index: 3;
         width: 100%;
         background-color: white;
         top: 0;
@@ -199,6 +235,10 @@ h1 {
         flex-direction: column;
         justify-content: center;
         align-items: center;
+    }
+
+    .mobileNav {
+        display: flex;
     }
 
     .project-grid {
@@ -222,3 +262,55 @@ h1 {
         padding: 24px;
     }
 }
+
+@media only screen and (max-width: 432px) {
+    .title p {
+        display: none;
+    }
+}
+
+.animateBar1 {
+    animation: flipBar1 0.5s ease-out forwards;
+}
+
+.animateBar2 {
+    animation: fadeBar2 0.5s ease-out forwards;
+}
+
+.animateBar3 {
+    animation: flipBar3 0.5s ease-out forwards;
+}
+
+@keyframes flipBar1 {
+    from {
+        transform: rotate(0);
+    }
+    to {
+        transform: rotate(45deg) translate(4px, 7.5px);
+    }
+}
+
+@keyframes fadeBar2 {
+    0% {
+        transform: scaleX(1);
+        opacity: 1;
+    }
+    100% {
+        transform: scaleX(0);
+        opacity: 0;
+    }
+}
+
+@keyframes flipBar3 {
+    from {
+        transform: rotate(0);
+    }
+    to {
+        transform: rotate(-45deg) translate(4px, -7.5px);
+    }
+}
+
+/* .purple { */
+/*     background-color: purple; */
+/*     transform: scale(2); */
+/* } */
